cluster/apps/weave-gitops/namespace.yaml
# cluster/apps/weave-gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weave-gitops
